Java7 compatible change for Base64.